force-app/main/default/objects/cpm__Notification_Contacts__c/cpm__Notification_Contacts__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Information about right contacts at customer in case of billing or errors</description>
    <label>Notification Contacts</label>
</CustomObject>