force-app/main/default/objects/cpm__Notification_Contacts__c/fields/cpm__Email__c.field-meta.xml
<CustomField>
    <fullName>cpm__Email__c</fullName>
    <description>E-mail address of contact person/group</description>
    <label>Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>