force-app/main/default/objects/cpm__Notification_Contacts__c/fields/cpm__isActive__c.field-meta.xml
<CustomField>
    <fullName>cpm__isActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>