force-app/main/default/objects/cpm__Notification_Contacts__c/fields/cpm__Organization_Id__c.field-meta.xml
<CustomField>
    <fullName>cpm__Organization_Id__c</fullName>
    <defaultValue>$Organization.Id</defaultValue>
    <description>Organization Id, to be use on data warehouse</description>
    <label>Organization Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>