force-app/main/default/objects/cpm__Notification_Contacts__c/fields/cpm__Type__c.field-meta.xml
<CustomField>
    <fullName>cpm__Type__c</fullName>
    <description>Type of the contact person/group</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>